--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "{NAME}",
   "description": "",
   "version": "0.1.0",
+  "repository": "git://github.com/frozenjs/boilerplate",
   "devDependencies": {
-    "volo-grunt": "0.1.3",
+    "volo-grunt": "~0.1.3",
     "grunt": "~0.4.1",
-    "grunt-dojo": "~0.2.0",
+    "grunt-dojo": "~0.2.3",
     "grunt-open": "~0.2.0",
-    "grunt-regarde": "~0.1.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-jshint": "~0.3.0",
-    "grunt-contrib-connect": "~0.2.0",
-    "grunt-contrib-livereload": "~0.1.2",
-    "grunt-cli": "~0.1.6"
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-connect": "~0.3.0",
+    "connect-livereload": "~0.2.0"
   },
   "volo": {
     "baseUrl": "deps",
     "dependencies": {
-      "frozen": "github:iceddev/frozen/0.3.0"
+      "frozen": "github:iceddev/frozen/0.4.0"
     }
   },
   "dojoBuild": "game.profile.js"
